# travel-mini-project

./: App.vue  README.md  docker-compose.yml  index.html  login_flow.drawio  note.txt  package-lock.json
api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/config/: database.py
api/docker/postgres/data/db/: postmaster.pid
api/docker/postgres/data/db/base/1/: 2619
api/docker/postgres/data/db/global/: 1260  pg_control
api/models/: __init__.py  base_model.py  blogs.py  comments.py  travels.py  users.py
api/routers/: __init__.py  admin.py  login.py  users.py
api/schema/: base.py  user.py
docker/postgres/data/db/: postmaster.pid
docker/postgres/data/db/base/1/: pg_internal.init
docker/postgres/data/db/base/24599/: 112  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13370  13370_fsm  (+228 more)
docker/postgres/data/db/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
src/: main.js
src/components/: Login.vue  registration.vue
src/router/: index.js
src/views/: AboutView.vue  Blog.vue  HomeView.vue  Travel.vue
web/: App.vue  package-lock.json  package.json
web/src/: main.js
web/src/admin/: addBlogs.vue  addTravel.vue  commentMagement.vue  editAdminInformation.vue  managerBlog.vue  managerTravel.vue
web/src/assets/img/: okayama.htm
web/src/components/: End.vue  Login.vue  Register.vue  TheWelcome.vue  blogs1.vue  blogs2.vue  blogs3.vue  cuisine.vue  maps.vue
web/src/router/: index.js
web/src/views/: Blog.vue  Contact.vue  HomeView.vue  Menu.vue  Travel.vue
(+283 files in other folders)
